<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="ad_here">Your advertisement could be here</string>
    <string name="aggressive">Aggressive</string>
    <string name="android_api_level">Android SDK</string>
    <string name="android_codename">Android Codename</string>
    <string name="android_version">Android Version</string>
    <string name="app_name">Kernel Adiutor</string>
    <string name="apply_on_boot">Apply on boot</string>
    <string name="apply_on_boot_canceled">Applying settings canceled.</string>
    <string name="apply_on_boot_complete">Applying settings completed.</string>
    <string name="apply_on_boot_text">Applying settings in %d seconds.</string>
    <string name="architecture">Architecture</string>
    <string name="backup">Backup</string>
    <string name="balanced">Balanced</string>
    <string name="baseband">Baseband</string>
    <string name="battery">Battery</string>
    <string name="blu_plug_summary">"An in-kernel replacement for Qualcomm's MPDecision. Developed by Code_Blue team."</string>
    <string name="boost_lock_duration">Boost Lock Duration</string>
    <string name="boost_lock_duration_summary">Minimum interval a CPU is boosted.</string>
    <string name="bootloader">Bootloader</string>
    <string name="build_display_id">Build Display ID</string>
    <string name="build_prop_editor">Build prop Editor</string>
    <string name="bus">Bus</string>
    <string name="cancel">Cancel</string>
    <string name="celsius">ºC</string>
    <string name="cfs_scheduler_policy">CFS Scheduler Policy</string>
    <string name="cfs_scheduler_policy_summary">Policy decides the CFS scheduler how to balance tasks onto different CPU unit.</string>
    <string name="checking_info">Checking info…</string>
    <string name="checking_root">Checking root access</string>
    <string name="collecting_info">Collecting info</string>
    <string name="conservative">Conservative</string>
    <string name="contributors">Contributors</string>
    <string name="core">Core %d</string>
    <string name="cores_singular">%d core</string>
    <string name="cpu">CPU</string>
    <string name="cpu_boost">CPU Boost</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cpu_governor_summary">The CPU governor determines how the CPU behaves in response to changes in workload. Changing the governor will impact how the CPU scales through the frequency steps available to your CPU.</string>
    <string name="cpu_governor_tunables">CPU Governor Tunables</string>
    <string name="cpu_hotplug">CPU Hotplug</string>
    <string name="cpu_max_freq">CPU Maximum Frequency</string>
    <string name="cpu_max_freq_summary">Set the maximum frequency the CPU scales up to.</string>
    <string name="cpu_max_screen_off_freq">CPU Maximum Screen Off Frequency</string>
    <string name="cpu_max_screen_off_freq_summary">Set the maximum frequency the CPU scales up to when the screen is off.</string>
    <string name="cpu_min_freq">CPU Minimum Frequency</string>
    <string name="cpu_min_freq_summary">Set the minimum frequency the CPU scales down to.</string>
    <string name="cpu_quiet">CPUQuiet</string>
    <string name="cpu_quiet_governor">CPUQuiet Governor</string>
    <string name="cpu_quiet_summary">CPUQuiet implements pluggable policies for forcing cpu cores into quiescent state. Appropriate policies will save power without hurting performance.</string>
    <string name="cpu_voltage">CPU Voltage</string>
    <string name="cpus_boosted">CPUs Boosted</string>
    <string name="cpus_boosted_summary">Maximum number of CPUs boosted at the same time.</string>
    <string name="custom_controls">Custom Controls</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="debug_mask">Debug Mask</string>
    <string name="debug_mask_summary">Allows you to activate debug mask for operations.</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="defer_sampling">Defer Sampling</string>
    <string name="device">Device</string>
    <string name="disabled">Disabled</string>
    <string name="donate">Donate</string>
    <string name="donate_nope">"I won't fall for this scam!"</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="gpu">GPU</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="searching_busybox">Searching for busybox</string>
    <string name="check_md5">Checking md5</string>
    <string name="confirmation_notification">Confirmation Notification</string>
    <string name="dark_theme">Dark theme</string>
    <string name="debugging">Debugging</string>
    <string name="delay">Delay</string>
    <string name="delete_password">Delete Password</string>
    <string name="driver_message">Driver Message</string>
    <string name="driver_message_summary">Copy driver message (dmesg) to /sdcard/dmesg.txt</string>
    <string name="fahrenheit_summary">Use fahrenheit to measure temperature.</string>
    <string name="fahrenheit_title">Fahrenheit</string>
    <string name="hide">Hide</string>
    <string name="install">Install</string>
    <string name="last_kmsg">Last Kernel Message</string>
    <string name="last_kmsg_summary">Copy /proc/last_kmsg to /sdcard/last_kmsg.txt</string>
    <string name="logcat">Logcat</string>
    <string name="logcat_summary">Copy logcat to /sdcard/logcat.txt</string>
    <string name="material_icon">Material icon</string>
    <string name="output">Output</string>
    <string name="section_icons">Section Icons</string>
    <string name="section_icons_summary">Show icons for each section in navigation drawer.</string>
    <string name="sections">Sections</string>
    <string name="security">Security</string>
    <string name="test">Test</string>
    <string name="user_interface">User interface</string>
    <string name="banner_resizer">Banner resizer</string>
    <string name="hide_banner">Hide banner</string>
    <string name="script">Script</string>
    <string name="set_password">Set Password</string>
    <string name="accent_color">Accent Color</string>
    <string name="apply_on_boot_confirmation_notification_summary">After apply on boot with visible notification, show a notification afterwards with the confirmation that apply on boot was successful.</string>
    <string name="apply_on_boot_hide_summary">Hide the notification of apply on boot. Delay will still remain!</string>
    <string name="apply_on_boot_script_summary">Use a shell script to apply settings. Please only enable this if you have troubles with apply on boot. If the problem still persists after enabling this option, please make sure no other app is conflicting with Kernel Adiutor.</string>
    <string name="apply_on_boot_toast_summary">Show toast when settings got applied.</string>
    <string name="fingerprint_summary">Use fingerprint to pass security check. This will work as long you have fingerprints registered.</string>
    <string name="force_english">Force displaying english language</string>
    <string name="hit_test">You have to hit test first!</string>
    <string name="md5_mismatch">"The downloaded file has a different MD5. This has following reasons:

• The downloaded file is corrupted
• The developer has declared a wrong MD5

Try to download the file again. If you still get this error, please contact the developer of this kernel."</string>
    <string name="required">required</string>
    <string name="set_password_summary">"You can protect Kernel Adiutor by setting up a password. Every time you open this application, you have to enter it. If you forget it, simply wipe the data of this application in settings of your device. Don't worry I won't share your password."</string>
    <string name="toast">Toast</string>
    <string name="apply_on_boot_test_summary">Test apply on boot. This includes all kind of things which are getting applied during booting, such as custom controls, profiles, init.d, etc.</string>
    <string name="force_cards">Force cards</string>
    <string name="force_cards_summary">Use cards for items if possible.</string>
</resources>