<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference android:key="adview" app:layout="@layout/rv_ad_view" />
    <SwitchPreferenceCompat android:title="@string/fahrenheit_title" android:key="useretardedmeasurement" android:summary="@string/fahrenheit_summary" />
    <SwitchPreferenceCompat android:key="forceenglish" android:summary="@string/force_english" />
    <PreferenceCategory android:title="@string/user_interface" android:key="user_interface">
        <SwitchPreferenceCompat android:key="darktheme" android:summary="@string/dark_theme" />
        <SwitchPreferenceCompat android:key="materialicon" android:summary="@string/material_icon" />
        <Preference android:key="banner_resizer" android:summary="@string/banner_resizer" />
        <SwitchPreferenceCompat android:key="hide_banner" android:summary="@string/hide_banner" />
        <SwitchPreferenceCompat android:title="@string/force_cards" android:key="forcecards" android:summary="@string/force_cards_summary" />
        <com.grarak.kerneladiutor.views.preference.ColorPreference android:key="accent_color" android:summary="@string/accent_color" />
        <SwitchPreferenceCompat android:title="@string/section_icons" android:key="section_icons" android:summary="@string/section_icons_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/apply_on_boot">
        <ListPreference android:entries="@array/apply_on_boot_delay_entries" android:title="@string/delay" android:key="applyonbootdelay" android:summary="%s" android:defaultValue="10" android:entryValues="@array/apply_on_boot_delay_values" />
        <Preference android:title="@string/test" android:key="applyonboottest" android:summary="@string/apply_on_boot_test_summary" />
        <SwitchPreferenceCompat android:title="@string/hide" android:key="applyonboothide" android:summary="@string/apply_on_boot_hide_summary" />
        <SwitchPreferenceCompat android:title="@string/confirmation_notification" android:key="applyonbootconfirmationnotification" android:summary="@string/apply_on_boot_confirmation_notification_summary" android:defaultValue="true" />
        <SwitchPreferenceCompat android:title="@string/toast" android:key="applyonboottoast" android:summary="@string/apply_on_boot_toast_summary" />
        <SwitchPreferenceCompat android:title="@string/script" android:key="applyonbootscript" android:summary="@string/apply_on_boot_script_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debugging" android:key="debugging_category">
        <Preference android:title="@string/logcat" android:key="logcat" android:summary="@string/logcat_summary" />
        <Preference android:title="@string/last_kmsg" android:key="lastkmsg" android:summary="@string/last_kmsg_summary" />
        <Preference android:title="@string/driver_message" android:key="dmesg" android:summary="@string/driver_message_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/security" android:key="security_category">
        <Preference android:title="@string/set_password" android:key="set_password" android:summary="@string/set_password_summary" />
        <Preference android:key="delete_password" android:summary="@string/delete_password" />
        <SwitchPreferenceCompat android:title="@string/fingerprint" android:key="fingerprint" android:summary="@string/fingerprint_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sections" android:key="sections" />
</PreferenceScreen>