<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@id/splash_background" android:layout_width="fill_parent" android:layout_height="160.0dip" />
    <TextView android:textSize="22.0sp" android:textColor="@color/white" android:gravity="center_vertical" android:background="@color/colorPrimaryDark" android:paddingLeft="38.0dip" android:layout_width="fill_parent" android:layout_height="68.0dip" android:text="@string/checking_info" />
    <android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="fill_parent" app:cardCornerRadius="0.0dip">
        <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:id="@id/root_access_text" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/checking_root" />
            <TextView android:id="@id/busybox_text" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/searching_busybox" />
            <TextView android:id="@id/info_collect_text" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/collecting_info" />
        </LinearLayout>
        <ProgressBar android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-7.0dip" android:indeterminate="true" style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal" />
    </android.support.v7.widget.CardView>
</LinearLayout>