<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:padding="10.0dip" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="?android:textColorPrimary" android:id="@id/title" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
            <TextView android:textSize="12.0sp" android:textStyle="bold|italic" android:id="@id/required_text" android:paddingLeft="10.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/required" />
        </LinearLayout>
        <TextView android:id="@id/summary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" />
        <HorizontalScrollView android:scrollbarSize="3.0dip" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="32.0dip" android:layout_marginTop="2.0dip" android:layout_marginRight="32.0dip" android:layout_weight="1.0">
            <TextView android:textSize="12.0sp" android:id="@id/code" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </HorizontalScrollView>
        <TextView android:textSize="12.0sp" android:gravity="center_horizontal" android:id="@id/test_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/hit_test" />
        <android.support.v7.widget.AppCompatButton android:textSize="12.0sp" android:layout_gravity="center_horizontal" android:id="@id/test_button" android:background="?selectableItemBackgroundBorderless" android:focusable="true" android:layout_width="50.0dip" android:layout_height="30.0dip" android:text="@string/test" />
        <LinearLayout android:orientation="vertical" android:id="@id/output_parent" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip">
            <TextView android:textColor="?android:textColorPrimary" android:id="@id/output_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:text="@string/output" />
            <HorizontalScrollView android:scrollbarSize="2.0dip" android:scrollbars="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12.0sp" android:id="@id/output" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </HorizontalScrollView>
            <ProgressBar android:id="@id/progress" android:layout_width="30.0dip" android:layout_height="30.0dip" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>