<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:foreground="?selectableItemBackground"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false">
        <LinearLayout android:orientation="vertical" android:id="@id/cpu_parent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="12.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center" android:id="@id/cpu" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/cpu" android:maxLines="1" android:textAllCaps="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/gpu_parent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="12.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center" android:id="@id/gpu" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/gpu" android:maxLines="1" android:textAllCaps="true" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <TextView android:textSize="12.0sp" android:textColor="?android:textColorPrimary" android:layout_gravity="center" android:id="@id/battery" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="@string/battery" android:maxLines="1" android:textAllCaps="true" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>