<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <android.support.v7.widget.AppCompatImageButton android:layout_gravity="center" android:id="@id/frequency_refresh" android:background="?selectableItemBackgroundBorderless" android:layout_width="30.0dip" android:layout_height="30.0dip" android:scaleType="fitCenter" android:tint="?colorAccent" app:srcCompat="@drawable/ic_refresh" />
        <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/refresh" android:maxLines="1" android:textAllCaps="true" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <android.support.v7.widget.AppCompatImageButton android:layout_gravity="center" android:id="@id/frequency_reset" android:background="?selectableItemBackgroundBorderless" android:layout_width="30.0dip" android:layout_height="30.0dip" android:scaleType="fitCenter" android:tint="?colorAccent" android:scaleY="-1.0" app:srcCompat="@drawable/ic_refresh" />
        <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/reset" android:maxLines="1" android:textAllCaps="true" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <android.support.v7.widget.AppCompatImageButton android:layout_gravity="center" android:id="@id/frequency_restore" android:background="?selectableItemBackgroundBorderless" android:layout_width="30.0dip" android:layout_height="30.0dip" android:scaleType="fitCenter" android:tint="?colorAccent" app:srcCompat="@drawable/ic_restore" />
        <TextView android:textSize="12.0sp" android:ellipsize="end" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/restore" android:maxLines="1" android:textAllCaps="true" />
    </LinearLayout>
</LinearLayout>