<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardElevation="3.0dip" app:cardUseCompatPadding="true" app:contentPadding="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:gravity="center_horizontal" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:textIsSelectable="true" />
        <View android:layout_marginTop="10.0dip" style="@style/Divider" />
        <TextView android:gravity="center_horizontal" android:id="@id/summary" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:textIsSelectable="true" />
        <TextView android:textSize="13.0sp" android:id="@id/changelog" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:textIsSelectable="true" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/downloadSection" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
            <LinearLayout android:orientation="vertical" android:id="@id/progressParent" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="12.0sp" android:gravity="end" android:id="@id/progressText" android:layout_width="fill_parent" android:layout_height="wrap_content" />
                <ProgressBar android:id="@id/progressbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="100" style="@style/Widget.AppCompat.ProgressBar.Horizontal" />
            </LinearLayout>
            <android.support.design.widget.FloatingActionButton android:layout_gravity="end|center" android:id="@id/fab_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:fabSize="mini" />
        </LinearLayout>
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/checkmd5" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <ProgressBar android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:paddingLeft="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/check_md5" />
        </LinearLayout>
        <TextView android:id="@id/md5_mismatch" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/md5_mismatch" />
        <android.support.v7.widget.AppCompatButton android:layout_gravity="center_horizontal" android:id="@id/install" android:background="?selectableItemBackground" android:visibility="gone" android:layout_width="100.0dip" android:layout_height="30.0dip" android:text="@string/install" />
    </LinearLayout>
</android.support.v7.widget.CardView>